started work on JSON parser, continuing migrating to rebar

--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,4 @@
 {deps, [
-	{jiffy, ".*", {git, "git://github.com/davisp/jiffy.git"}}
+%%	{jiffy, ".*", {git, "git://github.com/davisp/jiffy.git"}}
+	{jsonx, ".*", {git, "https://github.com/iskra/jsonx.git"}}
        ]}.
