WIP on twitter module

--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,4 @@
 {deps, [
-	{jsonx, ".*", {git, "https://github.com/iskra/jsonx.git"}}
+	{jsonx, ".*", {git, "https://github.com/iskra/jsonx.git"}},
+	{oauth, ".*", {git, "https://github.com/tim/erlang-oauth.git"}}
        ]}.
