adeed mochiweb to deps

--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,5 @@
 {deps, [
 	{jsonx, ".*", {git, "https://github.com/iskra/jsonx.git"}},
-	{oauth, ".*", {git, "https://github.com/tim/erlang-oauth.git"}}
+	{oauth, ".*", {git, "https://github.com/tim/erlang-oauth.git"}},
+	{mochiweb, ".*", {git, "https://github.com/mochi/mochiweb.git"}}
        ]}.
