added mochiweb to deps

--- a/rebar.config
+++ b/rebar.config
@@ -3,3 +3,11 @@
 	{oauth, ".*", {git, "https://github.com/tim/erlang-oauth.git"}},
 	{mochiweb, ".*", {git, "https://github.com/mochi/mochiweb.git"}}
        ]}.
+
+{erl_opts, [
+	   {i, "include"},
+	   {src_dirs, ["src", 
+		       "src/modules",
+		       "src/plugins",
+		       "src/behaviours"]}
+	   ]}.
