move behaviours in erl_first_files section

--- a/rebar.config
+++ b/rebar.config
@@ -4,10 +4,7 @@
 	{mochiweb, ".*", {git, "https://github.com/mochi/mochiweb.git"}}
        ]}.
 
-{erl_opts, [
-	   {i, "include"},
-	   {src_dirs, ["src", 
-		       "src/modules",
-		       "src/plugins",
-		       "src/behaviours"]}
-	   ]}.
+{erl_first_files, ["src/behaviousr/*.erl"]}.
+
+{src_dirs, ["src",
+            "src/modules"]}.
