switch from jsonx to jiffy

--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,6 @@
 {deps, [
-	{jsonx, ".*", {git, "https://github.com/iskra/jsonx.git"}},
+        {jiffy, ".*", {git, "https://github.com/davisp/jiffy.git"}}
+
 	{oauth, ".*", {git, "https://github.com/tim/erlang-oauth.git"}},
 	{mochiweb, ".*", {git, "https://github.com/mochi/mochiweb.git"}}
        ]}.
