add directory for data structures

--- a/rebar.config
+++ b/rebar.config
@@ -8,4 +8,5 @@
 {erl_first_files, ["src/behaviousr/*.erl"]}.
 
 {src_dirs, ["src",
+            "src/data_structures",
             "src/modules"]}.
