--- a/rebar.config
+++ b/rebar.config
@@ -1,12 +1,11 @@
 {deps, [
-        {jiffy, ".*", {git, "https://github.com/davisp/jiffy.git"}}
-
+        {jiffy, ".*", {git, "https://github.com/davisp/jiffy.git"}},
 	{oauth, ".*", {git, "https://github.com/tim/erlang-oauth.git"}},
 	{mochiweb, ".*", {git, "https://github.com/mochi/mochiweb.git"}}
        ]}.
 
 {erl_first_files, ["src/behaviousr/*.erl"]}.
 
-{src_dirs, ["src",
-            "src/data_structures",
+{src_dirs, ["src/data_structures",
+            "src",
             "src/modules"]}.
