add plugins directory

--- a/rebar.config
+++ b/rebar.config
@@ -7,5 +7,6 @@
 {erl_first_files, ["src/behaviousr/*.erl"]}.
 
 {src_dirs, ["src/data_structures",
-            "src",
-            "src/modules"]}.
+            "src/plugins",
+            "src/commands",
+            "src"]}.
