switch logging to lager

--- a/rebar.config
+++ b/rebar.config
@@ -1,8 +1,11 @@
 {deps, [
         {jiffy, ".*", {git, "https://github.com/davisp/jiffy.git"}},
 	{oauth, ".*", {git, "https://github.com/tim/erlang-oauth.git"}},
-	{mochiweb, ".*", {git, "https://github.com/mochi/mochiweb.git"}}
+	{mochiweb, ".*", {git, "https://github.com/mochi/mochiweb.git"}},
+        {lager, ".*", {git, "git://github.com/basho/lager.git", "master"}}
        ]}.
+
+{erl_opts, [{parse_transform, lager_transform}]}.
 
 {erl_first_files, ["src/behaviousr/*.erl"]}.
 
