add gitignore to rel

--- a/rebar.config
+++ b/rebar.config
@@ -5,6 +5,8 @@
         {lager, ".*", {git, "git://github.com/basho/lager.git", "master"}}
        ]}.
 
+{sub_dirs, ["rel"]}.
+
 {erl_opts, [{parse_transform, lager_transform}]}.
 
 {erl_first_files, ["src/behaviousr/*.erl"]}.
