add sasl_auth parameter to config (sasl mechanism specification)

--- a/priv/default.iris.config
+++ b/priv/default.iris.config
@@ -18,6 +18,7 @@
          {jids, [{"somejid@server.do", 
                   [{resource, "any_resource"},
                    {status, "status text here~"},
+                   {sasl_auth, "DIGEST-MD5"},
                    {password, "very_secret_password"},
                    {rooms,[{"room1@conference.server.do", 
                             [{nick, "Room Nick"},
@@ -38,6 +39,7 @@
                   ]},
                  {"another_jid@server.do",
                   [{resource, "resource"},
+                   {sasl_auth, "PLAIN"},
                    {status, "status~"},
                    {password, "very_very_secret_password"},
                    {rooms,[{"room1@conference.server.do", [{nick, "Noom Rick"}]},
