add mochiweb_xpath to deps

--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,8 @@
         {jiffy, ".*", {git, "https://github.com/davisp/jiffy.git"}},
 	{oauth, ".*", {git, "https://github.com/tim/erlang-oauth.git"}},
 	{mochiweb, ".*", {git, "https://github.com/mochi/mochiweb.git"}},
-        {lager, ".*", {git, "git://github.com/basho/lager.git", "master"}}
+        {lager, ".*", {git, "git://github.com/basho/lager.git", "master"}},
+        {mochiweb_xpath, ".*", {git, "https://github.com/retnuh/mochiweb_xpath.git"}}
        ]}.
 
 {sub_dirs, ["rel"]}.
