change deps order (jiffy requiring lager)

--- a/rebar.config
+++ b/rebar.config
@@ -1,9 +1,9 @@
 {deps, [
         {jiffy, ".*", {git, "https://github.com/davisp/jiffy.git"}},
-	{oauth, ".*", {git, "https://github.com/tim/erlang-oauth.git"}},
-	{mochiweb, ".*", {git, "https://github.com/mochi/mochiweb.git"}},
-        {lager, ".*", {git, "git://github.com/basho/lager.git", "master"}},
-        {mochiweb_xpath, ".*", {git, "https://github.com/retnuh/mochiweb_xpath.git"}}
+        {lager, ".*", {git, "https://github.com/basho/lager.git", "master"}},
+        {oauth, ".*", {git, "https://github.com/tim/erlang-oauth.git"}},
+        {mochiweb, ".*", {git, "https://github.com/mochi/mochiweb.git"}},
+        {mochiweb_xpath, ".*", {git, "https://github.com/retnuh/mochiweb_xpath.git"}},
        ]}.
 
 {sub_dirs, ["rel"]}.
