add exmpp to rebar deps

--- a/rebar.config
+++ b/rebar.config
@@ -4,6 +4,7 @@
         {oauth, ".*", {git, "https://github.com/tim/erlang-oauth.git"}},
         {mochiweb, ".*", {git, "https://github.com/mochi/mochiweb.git"}},
         {mochiweb_xpath, ".*", {git, "https://github.com/retnuh/mochiweb_xpath.git"}},
+        {exmpp, ".*", {git, "https://github.com/Zert/exmpp.git"}}
        ]}.
 
 {sub_dirs, ["rel"]}.
