add default config for message logger

--- a/priv/default.iris.config
+++ b/priv/default.iris.config
@@ -14,6 +14,10 @@
                           {api_key, "your-api-key"},
                           {engine_id, "your-custom-search-engine-id"}
                          ]},
+         
+         {message_logger, [
+                           {dir, "./logs"}
+                           ]},
 
          {jids, [{"somejid@server.do", 
                   [{resource, "any_resource"},
